Move cats and syndications back into the card, shrinking them down to avoid taking up too much vertical space

--- a/entries/static/entries/css/h-entry.styl
+++ b/entries/static/entries/css/h-entry.styl
@@ -42,3 +42,5 @@ ol.entries, div.entry
 			max-width 100%
 		> :last-child
 			margin-bottom 0
+	.card-link
+		font-size 0.8rem
